--- a/christian.html
+++ b/christian.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <h1>Christian's iPad's Solo Trip to Amsterdam</h1>
+    <p>I left my iPad on a train in Köln and it continued on without me to Amsterdam and back.</p>
   <div id="timestamp">Initializing...</div>
   <div id="map"></div>
   <script>
